minor css change

--- a/client/partials/ListTemplate.html
+++ b/client/partials/ListTemplate.html
@@ -79,8 +79,8 @@
         </div>
     </div>
 
-    <div style="padding-left: 10%;width:95%">
-        <br><b>Short Description: <br><textarea name="description" value="about your space..." rows="40" cols="20" ng-model="post.description" style="width: 80%;height:25%"></textarea><br><br>
+    <div style="padding-left: 12%;width:95%">
+        <br><b>Short Description: <br><textarea name="description" value="about your space..." rows="40" cols="20" ng-model="post.description" style="width: 80%;height:150px;"></textarea><br><br>
     </div>
 
 </div>
