added background img

--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -15,7 +15,7 @@
   <div>{{registererrors}}</div>
 <style>
   body {
-      background-image: url("https://pixabay.com/static/uploads/photo/2016/02/18/22/18/picnic-1208229_960_720.jpg");
+      background-image: url(../assets/background.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-attachment: fixed;
