--- a/client/partials/ListTemplate.html
+++ b/client/partials/ListTemplate.html
@@ -1,7 +1,7 @@
 <style>
 
     body {
-        background-image: url("background.jpg");
+        background-image: url(../assets/background.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-attachment: fixed;
