--- a/client/partials/create.html
+++ b/client/partials/create.html
@@ -2,7 +2,7 @@
  
  body {
 
-       background: url(https://pixabay.com/static/uploads/photo/2016/02/18/22/18/picnic-1208229_960_720.jpg) no-repeat center center fixed; 
+       background: url(../assets/background.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
