edited home css

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -10,6 +10,15 @@
       background-size: cover;
       font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
     }   
+    
+    input {
+    padding:4px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    }
 .big {
     display: -webkit-flex;
     display: flex;
@@ -69,12 +78,13 @@ footer {
 .try {
     text-decoration: none;
     position: absolute;
-    top: 4%;
+    top: 12%;
     right: 4%;
-    width: 4%;
+    width: 7%;
     height: 7%;
     border: 2px solid black;
-    background-color:grey;
+    border-radius: 4em;
+    background-color:#e42a2a;
     color:black;
     font-weight: bold;
 }
@@ -82,12 +92,13 @@ footer {
 .try2 {
     text-decoration: none;
     position: absolute;
-    top: 4%;
+    top: 12%;
     left: 4%;
     width: 4%;
     height: 7%;
+    border-radius: 4em;
     border: 2px solid black;
-    background-color:grey;
+    background-color:#e42a2a;
     color:black;
     font-weight: bold;
 }
@@ -108,9 +119,11 @@ padding-left:5em;
 }
 
 .submitButton{
-  top: 4%;
-  right: 4%;
-  width:100px;
+    top: 4%;
+    font-size: 15px;
+    right: -24%;
+    width: 52%;
+    position: relative;
 }
 
 @media all and (min-width: 768px) {
